@@ -17,7 +17,7 @@
 **    r  =    an nvar column matrix containing the X data
 **              for the new subjects.
 **    var    = Cox variance matrix
-**    mean   = vector of means, for the Cox program
+**    xmean  = vector of means of the data, for centering.
 **    cn     =  n for the original (Cox) data
 **    cy     =  3 column matrix of original data
 **    cx     =  the original X data -- will be a dummy is se =0
@@ -30,9 +30,6 @@
 **    surv[ncurve][npt]  the conditional survival at t
 **    varh[ncurve][npt]  variance of the survival (if requested)
 **    used[ncurve][npt]  # of subjects contributing to each time point
-**    y[1,] - contains the survival times
-**    y[2,] - the number at risk at the time (old subjects)
-**    y[3,]  - the number of events (old subjects) at the time
 **
 **  Work space is allocated as needed
 **    for the calculations on the "old" data
@@ -57,8 +54,8 @@ static double   *y,
 		*isurv,
 		**used,
 		**tvar;
-static double   *strata,
-                ttime,    /* Some HP compilers choke on "time" as a variable */
+static int      *strata;
+static double   ttime,    /* Some HP compilers choke on "time" as a variable */
 		**imat,
 		*mean;
 static int      death,
@@ -70,9 +67,9 @@ static void    addup();
 
 void agsurv3(Sint   *sn,    Sint   *snvar,    Sint   *sncurve, 
 	     Sint   *snpt,  Sint   *sse,      double *score, 
-	     double *sy,    double *r,        double *coef, 
-	     double *var,   double *cmean,    Sint   *scn, 
-	     double *cy,    double *grpx,     double *cx,       double *ssurv,
+	     double *sy,    Sint   *grpx,     double *r,        double *coef, 
+	     double *var,   double *xmean,    Sint   *scn, 
+	     double *cy,    double *cx,       double *ssurv,
 	     double *varh,  double *sused,    Sint   *smethod)
 {
 
@@ -105,7 +102,6 @@ void agsurv3(Sint   *sn,    Sint   *snvar,    Sint   *sncurve,
     n = *sn;  nvar = *snvar;
     cn = *scn; npt = *snpt;
     se = *sse;
-    mean = cmean;
     ncurve = *sncurve;
     method = *smethod;
     death = method/10;
@@ -119,10 +115,11 @@ void agsurv3(Sint   *sn,    Sint   *snvar,    Sint   *sncurve,
     /*
     ** scratch space
     */
-    need = 2*n + se*nvar*(2+ n*(n+1)/2);
+    need = 2*n + se*nvar*(2+ n*(n+1)/2) + nvar;
     nscore = (double *) ALLOC(need, sizeof(double));
     for (i=0; i<need; i++) nscore[i] =0.0;  /* R doesn't zero the memory */
-    isurv  = nscore + n;
+    mean = nscore +n;
+    isurv  = mean + n;
     for (i=0; i<n; i++) isurv[i]=1;
     if (se==1) {
 	a = isurv + n;
@@ -148,19 +145,12 @@ void agsurv3(Sint   *sn,    Sint   *snvar,    Sint   *sncurve,
 	for (j=0; j<npt; j++)  surv[i][j] =1;
 
     /*
-    ** compute the risk scores, and center the data for stability
+    ** compute the risk scores
     */
-    if (se==1) {
-	for (i=0; i<cn; i++) {
-	    for (j=0; j<nvar; j++)
-		oldx[j][i] -= mean[j];
-	    }
-	}
     for (i=0; i<n; i++) {
 	nscore[i] =0;
 	for (j=0; j<nvar; j++) {
-	    newx[j][i] -= mean[j];
-	    nscore[i] += coef[j]* newx[j][i];
+	    nscore[i] += coef[j]* (newx[j][i] - xmean[j]);
 	    }
 	nscore[i] = exp(nscore[i]);
 	}
@@ -192,7 +182,7 @@ void agsurv3(Sint   *sn,    Sint   *snvar,    Sint   *sncurve,
 		    weight = score[k];
 		    denom += weight;
 		    for (i=0; i<nvar2; i++) {
-			a[i] += weight*(oldx[i][k]);
+			a[i] += weight*(oldx[i][k] - xmean[i]);
 			}
 		     }
 		if (stop[k]==ttime && event[k]==1) {
@@ -200,7 +190,7 @@ void agsurv3(Sint   *sn,    Sint   *snvar,    Sint   *sncurve,
 		    deaths++;
 		    e_denom += weight;
 		    for (i=0; i<nvar2; i++) {
-			a2[i] += weight*(oldx[i][k]);
+			a2[i] += weight*(oldx[i][k] - xmean[i]);
 			}
 		    }
 		}
@@ -261,9 +251,6 @@ void agsurv3(Sint   *sn,    Sint   *snvar,    Sint   *sncurve,
 		    person++;
 		    }
 		}
-	    start[itime] = ttime;
-	    stop[itime] = nrisk;
-	    event[itime]= deaths;
 	    itime++;
 	    }
 	}
@@ -274,7 +261,7 @@ static void addup(itime, haz, var)
 int itime;
 double haz, var;
     {
-    register int i, j, k, l;
+    int i, j, k, l;
     int     pstart,
 	    ic;
     double  temp,
