@@ -3,7 +3,7 @@
 #
 library(survival)
 
-options(na.action=na.exclude) # preserve missings
+options(na.action="na.exclude") # preserve missings
 options(contrasts=c('contr.treatment', 'contr.poly')) #ensure constrast type
 aeq <- function(x,y, ...) all.equal(as.vector(x), as.vector(y), ...)
 
